V2- Gestionar diferentes tallas y modelos vía Telegram

--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "check-availability-asics",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "telegram": "node telegram-bot.mjs",
+    "register-commands": "node register-commands.mjs"
   },
   "keywords": [],
   "author": "",
