Cambiar en docker-compose de env_file a environment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,9 @@ services:
     build: .
     container_name: asics-availability
     restart: unless-stopped
-    env_file:
-      - .env
+    environment:
+      TELEGRAM_TOKEN: ${TELEGRAM_TOKEN}
+      TELEGRAM_CHAT_ID: ${TELEGRAM_CHAT_ID}
     working_dir: /app
     volumes:
       - .:/app
